<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group>
        <item
            android:id="@+id/home"
            android:icon="@drawable/sd_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/sd_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/sd_info"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/sd_settings"
            android:title="@string/settings" />

    </group>

    <group>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/sd_logout_temp"
            android:title="@string/logout" />

    </group>
</menu>