<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginScreen">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="495dp"
        android:layout_height="850dp"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_screen_1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/aeroluggage_logo"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="28dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginBottom="296dp"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="16dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/id"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/baseline_lock_open_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="495dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="283dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sla_logo"
        tools:layout_editor_absoluteY="625dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteY="668dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>


